[package]
name = "psp-allowed-fsgroups"
version = "1.0.6"
authors = ["Rafael Fernández López <ereslibre@ereslibre.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
kubewarden-policy-sdk = { version = "0.15.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
